Include multiple tasks in breadcrumb